original image in new tab on click cover, fix nav on small screens

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,12 @@
 @import 'material';
 
+// Уменьшение внутреннего отступа в header-е
+@media screen and (max-width: 768px) {
+  .mdl-layout__header-row {
+    padding-right: 10px !important;
+  }
+}
+
 // Форма добавления изображения
 .mdl-button--file {
   input {
